--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.4"
+    "@actions/core": "^1.2.4",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.7",
-    "@types/node": "^14.0.26",
+    "@types/node": "^14.0.25",
     "@typescript-eslint/parser": "^3.7.0",
     "@zeit/ncc": "^0.22.3",
     "eslint": "^7.5.0",
     "eslint-plugin-github": "^4.1.1",
-    "eslint-plugin-jest": "^23.18.2",
+    "eslint-plugin-jest": "^23.18.0",
     "jest": "^24.9.0",
     "jest-circus": "^26.1.0",
     "js-yaml": "^3.14.0",
