--- a/.github/workflows/detect-pii.yml
+++ b/.github/workflows/detect-pii.yml
@@ -8,6 +8,10 @@ on: # rebuild any PRs and main branch changes
     types:
       - created
       - edited
+  pull_request:
+    types:
+      - opened
+      - edited
   pull_request_review_comment:
     types:
       - created
