--- a/.github/workflows/detect-pii.yml
+++ b/.github/workflows/detect-pii.yml
@@ -26,5 +26,5 @@ jobs:
         with:
           azureCognitiveSubscriptionKey: ${{ secrets.AZURE_COGNITIVE_SUBSCRIPTION_KEY }}
           azureCognitiveEndpoint: ${{ secrets.AZURE_COGNITIVE_ENDPOINT }}
-          categories: "email|ip|credit card|phoneNumber"
+          categories: "email|ip|credit card|phone number"
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
