--- a/.github/workflows/detect-pii.yml
+++ b/.github/workflows/detect-pii.yml
@@ -27,4 +27,5 @@ jobs:
           azureCognitiveSubscriptionKey: ${{ secrets.AZURE_COGNITIVE_SUBSCRIPTION_KEY }}
           azureCognitiveEndpoint: ${{ secrets.AZURE_COGNITIVE_ENDPOINT }}
           categories: "email|ip|credit card|phone number"
+          labelText: "PII DETECTED!!"
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
