--- a/.github/workflows/detect-pii.yml
+++ b/.github/workflows/detect-pii.yml
@@ -26,6 +26,6 @@ jobs:
         with:
           azureCognitiveSubscriptionKey: ${{ secrets.AZURE_COGNITIVE_SUBSCRIPTION_KEY }}
           azureCognitiveEndpoint: ${{ secrets.AZURE_COGNITIVE_ENDPOINT }}
-          categories: "email|ip|credit card|phone number"
+          categories: "email|ip|phone number"
           labelText: "PII DETECTED!!"
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
