--- a/action.yml
+++ b/action.yml
@@ -1,25 +1,22 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'PII Detection Action'
+description: 'Detects PII such as phone numbers, social security numbers, email addresses, IP addresses, etc. in any issues or pull requests that are opened, edited or commented on'
+author: 'rob-derosa@github.com'
 inputs:
   azureCognitiveSubscriptionKey:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'Azure Cognitive Services resource key found in in the Azure Portal'
   azureCognitiveEndpoint:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'Azure Cognitive Services endpoint found in in the Azure Portal'
   categories:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'A pipe-separated list of included categories'
   labelText:
     required: false
-    description: 'input description here'
+    description: 'The text of the label to be applied to any issues or pull requests containing PII'
 outputs:
   results:
-      description: 'the pii detection results'
+      description: 'PII analysis JSON results from Microsoft Text Analytics'
 runs:
   using: 'node12'
   main: 'dist/index.js'
