--- a/action.yml
+++ b/action.yml
@@ -1,17 +1,20 @@
 name: 'PII Detection Action'
 description: 'Detects PII such as phone numbers, social security numbers, email addresses, IP addresses, etc. in any issues or pull requests that are opened, edited or commented on'
 author: 'rob-derosa@github.com'
+branding:
+  icon: alert-triangle
+  color: red
 inputs:
-  azureCognitiveSubscriptionKey:
+  azure-cognitive-subscription-key:
     required: true
     description: 'Azure Cognitive Services resource key found in in the Azure Portal'
-  azureCognitiveEndpoint:
+  azure-cognitive-endpoint:
     required: true
     description: 'Azure Cognitive Services endpoint found in in the Azure Portal'
   categories:
     required: true
     description: 'A pipe-separated list of included categories'
-  labelText:
+  label-text:
     required: false
     description: 'The text of the label to be applied to any issues or pull requests containing PII'
 outputs:
